fix error by myself

--- a/biblio.bib
+++ b/biblio.bib
@@ -19,7 +19,7 @@
 @inproceedings{laforenza2007biological,
   title={Biological experiments on the grid: A novel workflow management platform},
   author={Laforenza, Domenico and Lombardo, Rosario and Scarpellini, M and Serrano, Massimo and Silvestri, Fabrizio and Faccioli, P},
-  booktitle={Computer-Based Medical Systems, 2007. CBMS'07. Twentieth IEEE International Symposium on},
+  booktitle={20th IEEE International Symposium on Computer-Based Medical Systems (CBMS'07)},
   pages={489--494},
   year={2007},
   organization={IEEE}
@@ -54,7 +54,7 @@
 
 @INPROCEEDINGS{Plankensteiner2009, 
 author={Plankensteiner, K. and Prodan, R. and Fahringer, T.}, 
-booktitle={e-Science, 2009. e-Science '09. Fifth IEEE International Conference on}, 
+booktitle={Fifth IEEE International Conference on e-Science (e-Science '09)}, 
 title={A New Fault Tolerance Heuristic for Scientific Workflows in Highly Distributed Environments Based on Resubmission Impact}, 
 year={2009}, 
 month={Dec}, 
@@ -69,7 +69,7 @@ pages={313-320},
 
 @INPROCEEDINGS{1542747, 
 author={Hui Li and Groep, D. and Wolters, L.}, 
-booktitle={Grid Computing, 2005. The 6th IEEE/ACM International Workshop on}, 
+booktitle={The 6th IEEE/ACM International Workshop on Grid Computing}, 
 title={Efficient response time predictions by exploiting application and resource state similarities}, 
 year={2005}, 
 month={Nov}, 
@@ -78,7 +78,7 @@ pages={8},
 
 @INPROCEEDINGS{1015660, 
 author={Junwei Cao and Jarvis, S.A. and Spooner, D.P. and Turner, J.D. and Kerbyson, D.J. and Nudd, G.R.}, 
-booktitle={Parallel and Distributed Processing Symposium., Proceedings International, IPDPS 2002, Abstracts and CD-ROM}, 
+booktitle={IEEE International Parallel and Distributed Processing Symposium (IPDPS 2002)}, 
 title={Performance prediction technology for agent-based resource management in grid environments}, 
 year={2002}, 
 month={April}, 
@@ -105,7 +105,7 @@ pages={14},
 
 @INPROCEEDINGS{Sun2003,
 author={Xian-He Sun and Wu, Ming},
-booktitle={Parallel and Distributed Processing Symposium, 2003. Proceedings. International},
+booktitle={International Parallel and Distributed Processing Symposium (IPDPS)},
 title={Grid Harvest Service: a system for long-term, application-level task scheduling},
 year={2003},
 month={April},
@@ -116,8 +116,7 @@ ISSN={1530-2075},}
 @INPROCEEDINGS{Ostberg2011,
   author = {Östberg, P.-O. and Elmroth, E.},
   title = {Mediation of Service Overhead in Service-Oriented Grid Architectures},
-  booktitle = {Grid Computing (GRID), 2011 12th IEEE/ACM International Conference
-	on},
+  booktitle = {12th IEEE/ACM International Conference on Grid Computing (GRID)},
   year = {2011},
   pages = {9-18},
   issn = {1550-5510}
@@ -173,7 +172,7 @@ pages={417-422},
 
 @INPROCEEDINGS{Huu2010, 
 author={Huu, T.T. and Montagnat, J.}, 
-booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2010 10th IEEE/ACM International Conference on}, title={Virtual Resources Allocation for Workflow-Based Applications Distribution on a Cloud Infrastructure}, 
+booktitle={10th IEEE/ACM International Conference on Cluster, Cloud and Grid Computing (CCGrid)}, title={Virtual Resources Allocation for Workflow-Based Applications Distribution on a Cloud Infrastructure}, 
 year={2010}, 
 pages={612-617}, 
 }
@@ -321,7 +320,7 @@ ISSN={1530-2075},}
 
 @INPROCEEDINGS{Villegas2012, 
 author={Villegas, D. and Antoniou, A. and Sadjadi, S.M. and Iosup, A.}, 
-booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2012 12th IEEE/ACM International Symposium on}, title={An Analysis of Provisioning and Allocation Policies for Infrastructure-as-a-Service Clouds}, 
+booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid)}, title={An Analysis of Provisioning and Allocation Policies for Infrastructure-as-a-Service Clouds}, 
 year={2012}, 
 pages={612-619}, 
 }
@@ -347,7 +346,6 @@ pages={612-619},
 	booktitle={Euro-Par 2013 Parallel Processing},
 	volume={8097},
 	series={Lecture Notes in Computer Science},
-	editor={Wolf, Felix and Mohr, Bernd and Mey, Dieter},
 	title={On-Line, Non-clairvoyant Optimization of Workflow Activity Granularity on Grids},
 	publisher={Springer Berlin Heidelberg},
 	author={Ferreira da Silva, Rafael and Glatard, Tristan and Desprez, Fr\'ed\'eric},
@@ -371,7 +369,7 @@ pages={612-619},
 
 @INPROCEEDINGS{Egwutuoha2012, 
 author={Egwutuoha, I.P. and Shiping Chen and Levy, D. and Selic, B.}, 
-booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2012 12th IEEE/ACM International Symposium on}, title={A Fault Tolerance Framework for High Performance Computing in Cloud}, 
+booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12)}, title={A Fault Tolerance Framework for High Performance Computing in Cloud}, 
 year={2012}, 
 pages={709-710}, 
 
@@ -379,7 +377,7 @@ pages={709-710},
 
 @INPROCEEDINGS{Silva2012, 
 author={Ferreira da Silva, R. and Glatard, T. and Desprez, F.}, 
-booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2012 12th IEEE/ACM International Symposium on}, title={Self-Healing of Operational Workflow Incidents on Distributed Computing Infrastructures}, 
+booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, title={Self-Healing of Operational Workflow Incidents on Distributed Computing Infrastructures}, 
 year={2012}, 
 pages={318-325}, 
 
@@ -467,7 +465,7 @@ pages={335-343},
 
 @INPROCEEDINGS{Ranjan2008, 
 author={Ranjan, R. and Rahman, M. and Buyya, R.}, 
-booktitle={Cluster Computing and the Grid, 2008. CCGRID '08. 8th IEEE International Symposium on}, title={A Decentralized and Cooperative Workflow Scheduling Algorithm}, 
+booktitle={8th IEEE International Symposium on Cluster Computing and the Grid (CCGRID) }, title={A Decentralized and Cooperative Workflow Scheduling Algorithm}, 
 year={2008}, 
 pages={1-8}, 
 },
@@ -492,7 +490,7 @@ pages={1-8},
 
 @INPROCEEDINGS{Cao2008, 
 author={Haijun Cao and Hai Jin and Xiaoxin Wu and Song Wu and Xuanhua Shi}, 
-booktitle={Grid Computing, 2008 9th IEEE/ACM International Conference on}, title={DAGMap: Efficient scheduling for DAG grid workflow job}, 
+booktitle={9th IEEE/ACM International Conference on Grid Computing}, title={DAGMap: Efficient scheduling for DAG grid workflow job}, 
 year={2008}, 
 pages={17-24}, 
 },
@@ -507,7 +505,7 @@ pages={364-374},
 
 @INPROCEEDINGS{Luo2012, 
 author={Yuan Luo and Plale, B.}, 
-booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2012 12th IEEE/ACM International Symposium on}, title={Hierarchical MapReduce Programming Model and Scheduling Algorithms}, 
+booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, title={Hierarchical MapReduce Programming Model and Scheduling Algorithms}, 
 year={2012}, 
 pages={769-774}, 
 },
@@ -545,7 +543,7 @@ pages={157-168}
 
 @INPROCEEDINGS{Gehr2009, 
 author={Gehr, J. and Schneider, J.}, 
-booktitle={Cluster Computing and the Grid, 2009. CCGRID '09. 9th IEEE/ACM International Symposium on}, title={Measuring Fragmentation of Two-Dimensional Resources Applied to Advance Reservation Grid Scheduling}, 
+booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID '09). }, title={Measuring Fragmentation of Two-Dimensional Resources Applied to Advance Reservation Grid Scheduling}, 
 year={2009}, 
 pages={276-283}, 
 },
@@ -553,7 +551,7 @@ pages={276-283},
 
 @INPROCEEDINGS{Tomas2012, 
 author={Tomas, L. and Caminero, B. and Carrión, C.}, 
-booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2012 12th IEEE/ACM International Symposium on}, title={Improving Grid Resource Usage: Metrics for Measuring Fragmentation}, 
+booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, title={Improving Grid Resource Usage: Metrics for Measuring Fragmentation}, 
 year={2012}, 
 pages={352-359}, 
 },
@@ -603,7 +601,7 @@ pages={1054-1059},
 
 @INPROCEEDINGS{Vossberg2008, 
 author={Vossberg, M. and Hoheisel, A. and Tolxdorff, T. and Krefting, D.}, 
-booktitle={Cluster Computing and the Grid, 2008. CCGRID '08. 8th IEEE International Symposium on}, title={A Reliable DICOM Transfer Grid Service Based on Petri Net Workflows}, 
+booktitle={8th IEEE International Symposium on Cluster Computing and the Grid (CCGRID '08)}, title={A Reliable DICOM Transfer Grid Service Based on Petri Net Workflows}, 
 year={2008}, 
 pages={441-448}, 
 },
@@ -637,7 +635,7 @@ pages={441-448},
 
 @INPROCEEDINGS{Rodríguez2012, 
 author={Rodríguez, R.J. and Tolosana-Calasanz, R. and Rana, O.F.}, 
-booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2012 12th IEEE/ACM International Symposium on}, title={Automating Data-Throttling Analysis for Data-Intensive Workflows}, 
+booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, title={Automating Data-Throttling Analysis for Data-Intensive Workflows}, 
 year={2012}, 
 pages={310-317}, 
 },
@@ -653,7 +651,7 @@ pages={310-317},
 
 @INPROCEEDINGS{Chen2012, 
 author={Weiwei Chen and Ewa Deelman}, 
-booktitle={Services (SERVICES), 2012 IEEE Eighth World Congress on}, title={Fault Tolerant Clustering in Scientific Workflows}, 
+booktitle={IEEE Eighth World Congress on Services (SERVICES)}, title={Fault Tolerant Clustering in Scientific Workflows}, 
 year={2012}, 
 pages={9-16}, 
 },
@@ -686,7 +684,7 @@ pages={86-93},
 @INPROCEEDINGS{4493929,
   author = {Muthuvelu, N. and Chai, I. and Eswaran, C.},
   title = {An Adaptive And Parameterized Job Grouping Algorithm For Scheduling Grid Jobs},
-  booktitle = {Advanced Communication Technology, 2008. ICACT 2008. 10th International Conference on},
+  booktitle = {10th International Conference on Advanced Communication Technology (ICACT 2008)},
   year = {2008},
   volume = {2},
   pages = {975 -980},
@@ -704,7 +702,7 @@ pages={86-93},
 	author={Weiwei Chen and Ewa Deelman},
 	year={2012},
 	month=may,
-	booktitle={The 12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing},
+	booktitle={The 12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12)},
 },
 
 @book{Oppenheimer2002,
@@ -749,7 +747,7 @@ pages={86-93},
 @inproceedings{Stratan2008,
   title={A performance study of grid workflow engines},
   author={Stratan, Corina and Iosup, Alexandru and Epema, Dick HJ},
-  booktitle={Grid Computing, 2008 9th IEEE/ACM International Conference on},
+  booktitle={9th IEEE/ACM International Conference on Grid Computing},
   pages={25--32},
   year={2008},
   organization={IEEE}
@@ -840,7 +838,7 @@ pages={86-93},
 @inproceedings{Zhang2009,
   title={Combined fault tolerance and scheduling techniques for workflow applications on computational grids},
   author={Zhang, Yang and Mandal, Anirban and Koelbel, Charles and Cooper, Keith},
-  booktitle={Cluster Computing and the Grid, 2009. CCGRID'09. 9th IEEE/ACM International Symposium on},
+  booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID'09)},
   pages={244--251},
   year={2009},
   organization={IEEE}
@@ -858,7 +856,7 @@ pages={86-93},
 @inproceedings{Sonmez2006,
   title={Communication-aware job placement policies for the KOALA grid scheduler},
   author={Sonmez, Ozan and Mohamed, Hashim and Epema, Dick},
-  booktitle={e-Science and Grid Computing, 2006. e-Science'06. Second IEEE International Conference on},
+  booktitle={Second IEEE International Conference on e-Science and Grid Computing (e-Science'06)},
   pages={79--79},
   year={2006},
   organization={IEEE}
@@ -1012,7 +1010,7 @@ pages={167-},
 
 @INPROCEEDINGS{Rubing2009, 
 author={Rubing Duan and Nadeem, F. and Jie Wang and Yun Zhang and Prodan, R. and Fahringer, T.}, 
-booktitle={Cluster Computing and the Grid, 2009. CCGRID '09. 9th IEEE/ACM International Symposium on}, title={A Hybrid Intelligent Method for Performance Modeling and Prediction of Workflow Activities in Grids}, 
+booktitle={9th IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID '09)}, title={A Hybrid Intelligent Method for Performance Modeling and Prediction of Workflow Activities in Grids}, 
 year={2009}, 
 pages={339-347}, 
 },
@@ -1239,7 +1237,6 @@ pages={389 -400},
 @misc{AmazonAWS,
     author = {{Amazon.com, Inc.}},
     title = {{Amazon Web Services}},
-    url = {http://aws.amazon.com},
     howpublished = {\url{http://aws.amazon.com}}
 },
 
@@ -1708,7 +1705,6 @@ ISSN={1045-9219},},
 @misc{Epigenome,
     key = {{USC Epigenome Center}},
     title = {{USC Epigenome Center}},
-    url = {http://epigenome.usc.edu},
     howpublished = {\url{http://epigenome.usc.edu}}
 },
 
@@ -1801,7 +1797,6 @@ ISSN={1045-9219},},
 @misc{FutureGrid,
     key = {{FutureGrid}},
     title = {{FutureGrid}},
-    url = {http://futuregrid.org/},
     howpublished = {\url{http://futuregrid.org/}}
 },
 
@@ -2190,7 +2185,6 @@ ISSN={1045-9219},},
 @misc{LIGO,
     key = {Laser Interferometer Gravitational Wave Observatory},
     title = {{Laser Interferometer Gravitational Wave Observatory (LIGO)}},
-    url = {http://www.ligo.caltech.edu},
     howpublished = {\url{http://www.ligo.caltech.edu}}
 },
 
@@ -2897,8 +2891,8 @@ ISSN={1045-9219},},
 @misc{WorkflowGenerator,
     key = {{Workflow Generator}},
     title = {{Workflow Generator}},
-    url = {https://confluence.pegasus.isi.edu/display/pegasus/WorkflowGenerator},
-    howpublished = {\url{https://confluence.pegasus.isi.edu/display/pegasus/WorkflowGenerator}},
+    howpublished = {\url{https://confluence.pegasus.isi.edu/display/pegasus
+/WorkflowGenerator}},
 },
 
 @misc{WorkflowPatterns,
@@ -2958,7 +2952,7 @@ pages={23-30},
 },
 @INPROCEEDINGS{Chen2013b,
 	author={Chen, Weiwei and Ferreira da Silva, Rafael and Deelman, Ewa and Sakellariou, Rizos},
-	booktitle={eScience (eScience), 2013 IEEE 9th International Conference on},
+	booktitle={2013 IEEE 9th International Conference on eScience},
 	title={Balanced Task Clustering in Scientific Workflows},
 	year={2013},
 	pages={188-195},
